# rs-kernel

./: .travis.yml  Cargo.toml  README.md
src/: error.rs  kernel.rs  lib.rs
src/memory/: mod.rs
