[package]
name = "kernel"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["kernel"]
description = "a minimal kernel in rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Bakasho/rs-kernel.git"
homepage = "https://github.com/Bakasho/rs-kernel"

[dependencies]
rlibc = "1.0"

[dependencies.vga]
git = "https://github.com/nathanfaucett/rs-vga.git"
